# kang_stock

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  kiwoom_rest_api_doc.xlsx  main.py  pyproject.toml  test_api.py
alembic/: env.py
alembic/versions/: b18e15aba6a1_initial.py
app/: __init__.py
app/common/: __init__.py  config.py  database.py  utils.py
app/notifications/: decorators.py  telegram.py
app/trading/: __init__.py
app/trading/external_api/: __init__.py  base.py  kiwoom.py  mock.py
app/trading/models/: __init__.py  cycle_history.py  order.py  position.py
app/trading/repository/: __init__.py  position.py
app/trading/services/: scheduler.py  trading.py
app/trading/strategy/: __init__.py  infinite_buy.py
tests/: conftest.py  test_mock_api.py  test_strategy.py
